--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -6,6 +6,8 @@
 @import "compass/reset";
 @import 'normalize';
 @import 'boilerplate-head';
+@import 'variables';
+@import 'mixins';
 @import 'main';
 @import 'boilerplate-foot';
 
