--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -355,6 +355,114 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+/* line 10, ../sass/_main.scss */
+html {
+  background: #AC402A;
+  font-family: "ff-meta-serif-web-pro", Georgia, serif;
+  font-weight: 500;
+  color: #2B3439;
+  font-size: 14px;
+}
+
+/* line 18, ../sass/_main.scss */
+body {
+  background: white;
+}
+
+/* line 22, ../sass/_main.scss */
+p {
+  margin-bottom: 0.8em;
+}
+
+/* line 26, ../sass/_main.scss */
+.container {
+  max-width: 1080px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
+/* line 32, ../sass/_main.scss */
+section {
+  padding: 120px 0;
+}
+
+/* line 38, ../sass/_main.scss */
+#hero {
+  background: #AC402A;
+  color: white;
+}
+
+/* line 42, ../sass/_main.scss */
+#hero-content {
+  width: 48.14815%;
+  margin: 0 auto;
+}
+
+/* line 48, ../sass/_main.scss */
+#introduction {
+  background: #155B62;
+  color: white;
+}
+
+/* line 52, ../sass/_main.scss */
+#intro-content {
+  *zoom: 1;
+}
+/* line 2, ../sass/_mixins.scss */
+#intro-content:before, #intro-content:after {
+  content: " ";
+  display: table;
+}
+/* line 6, ../sass/_mixins.scss */
+#intro-content:after {
+  clear: both;
+}
+/* line 54, ../sass/_main.scss */
+#intro-content .col-4 {
+  float: left;
+  width: 48.14815%;
+  margin-right: 3.7037%;
+}
+/* line 58, ../sass/_main.scss */
+#intro-content .col-4:last-child {
+  margin-right: 0;
+}
+
+/* line 65, ../sass/_main.scss */
+#people {
+  background: #F5F5F5;
+}
+/* line 67, ../sass/_main.scss */
+#people ul {
+  *zoom: 1;
+}
+/* line 2, ../sass/_mixins.scss */
+#people ul:before, #people ul:after {
+  content: " ";
+  display: table;
+}
+/* line 6, ../sass/_mixins.scss */
+#people ul:after {
+  clear: both;
+}
+/* line 69, ../sass/_main.scss */
+#people ul li {
+  float: left;
+  width: 30.864197530864%;
+  margin-right: 3.7037%;
+}
+/* line 73, ../sass/_main.scss */
+#people ul li:last-child {
+  margin-right: 0;
+}
+
+/* line 83, ../sass/_main.scss */
+footer {
+  background: #AC402A;
+  color: white;
+  padding: 90px 0;
+}
+
 /* ==========================================================================
    Media Queries
    ========================================================================== */
