--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -359,34 +359,66 @@ textarea {
 html {
   background: #b5533f;
   font-family: "ff-meta-serif-web-pro", Georgia, serif;
+  -webkit-font-smoothing: antialiased;
   font-weight: 500;
   color: #2B3439;
   font-size: 14px;
 }
 
-/* line 18, ../sass/_main.scss */
+/* line 19, ../sass/_main.scss */
 body {
   background: white;
 }
 
-/* line 22, ../sass/_main.scss */
+/* line 23, ../sass/_main.scss */
+h1 {
+  font-size: 43px;
+  line-height: 51px;
+  margin-bottom: 32px;
+}
+
+/* line 28, ../sass/_main.scss */
+h2 {
+  font-size: 48px;
+  line-height: 62px;
+  font-weight: 700;
+  margin-bottom: 60px;
+}
+
+/* line 34, ../sass/_main.scss */
+h3 {
+  font-size: 16px;
+  margin-bottom: 24px;
+}
+
+/* line 39, ../sass/_main.scss */
+a {
+  color: #b5533f;
+  text-decoration: underline;
+}
+/* line 42, ../sass/_main.scss */
+a:hover {
+  color: #155B62;
+}
+
+/* line 47, ../sass/_main.scss */
 p {
   margin-bottom: 0.8em;
 }
 
-/* line 26, ../sass/_main.scss */
+/* line 51, ../sass/_main.scss */
 .container {
   max-width: 1080px;
   padding: 0 20px;
   margin: 0 auto;
 }
 
-/* line 32, ../sass/_main.scss */
+/* line 57, ../sass/_main.scss */
 section {
   padding: 120px 0;
 }
 
-/* line 38, ../sass/_main.scss */
+/* line 63, ../sass/_main.scss */
 #hero {
   background: #b5533f;
   color: white;
@@ -397,17 +429,39 @@ section {
   -o-background-size: cover;
   background-size: cover;
 }
+/* line 72, ../sass/_main.scss */
+#hero .logo {
+  width: 100px;
+  height: 65px;
+  display: block;
+  background-image: url("/img/logo.png");
+  text-indent: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  -moz-background-size: 100px 65px;
+  -o-background-size: 100px 65px;
+  -webkit-background-size: 100px 65px;
+  background-size: 100px 65px;
+  margin-bottom: 55px;
+}
+/* line 81, ../sass/_main.scss */
+#hero p {
+  font-size: 22px;
+  margin-bottom: 32px;
+}
 
-/* line 48, ../sass/_main.scss */
+/* line 86, ../sass/_main.scss */
 #hero-content {
   width: 48.14815%;
   margin: 0 auto;
+  background-image: url("/img/hero-bg.png");
 }
 
-/* line 54, ../sass/_main.scss */
+/* line 93, ../sass/_main.scss */
 #introduction {
   background: #155B62;
   color: white;
+  font-size: 18px;
   background-image: url("/img/intro-bg.png");
   background-position: center center;
   -webkit-background-size: cover;
@@ -416,7 +470,7 @@ section {
   background-size: cover;
 }
 
-/* line 64, ../sass/_main.scss */
+/* line 104, ../sass/_main.scss */
 #intro-content {
   *zoom: 1;
 }
@@ -429,22 +483,27 @@ section {
 #intro-content:after {
   clear: both;
 }
-/* line 66, ../sass/_main.scss */
+/* line 106, ../sass/_main.scss */
 #intro-content .col-4 {
   float: left;
   width: 48.14815%;
   margin-right: 3.7037%;
 }
-/* line 70, ../sass/_main.scss */
+/* line 110, ../sass/_main.scss */
 #intro-content .col-4:last-child {
   margin-right: 0;
 }
 
-/* line 77, ../sass/_main.scss */
+/* line 118, ../sass/_main.scss */
+#companies h2 {
+  color: #155B62;
+}
+
+/* line 124, ../sass/_main.scss */
 #people {
   background: #F5F5F5;
 }
-/* line 79, ../sass/_main.scss */
+/* line 126, ../sass/_main.scss */
 #people ul {
   *zoom: 1;
 }
@@ -457,18 +516,18 @@ section {
 #people ul:after {
   clear: both;
 }
-/* line 81, ../sass/_main.scss */
+/* line 128, ../sass/_main.scss */
 #people ul li {
   float: left;
   width: 30.864197530864%;
   margin-right: 3.7037%;
 }
-/* line 85, ../sass/_main.scss */
+/* line 132, ../sass/_main.scss */
 #people ul li:last-child {
   margin-right: 0;
 }
 
-/* line 95, ../sass/_main.scss */
+/* line 142, ../sass/_main.scss */
 footer {
   background: #b5533f;
   color: white;
@@ -484,6 +543,12 @@ footer {
 /* ==========================================================================
    Media Queries
    ========================================================================== */
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
+  /* line 182, ../sass/_main.scss */
+  #hero .logo {
+    background-image: url("/img/logo@2x.png");
+  }
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
