--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -59,7 +59,15 @@ section {
 }
 
 
-
+.logo {
+  width: 100px;
+  height: 65px;
+  display: block;
+  background-image: url("/img/logo.png");
+  @include hide-text;
+  @include background-size(100px 65px);
+  margin-bottom: 55px;
+}
 #hero {
   background: $red;
   color: $white;
@@ -69,15 +77,6 @@ section {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  .logo {
-    width: 100px;
-    height: 65px;
-    display: block;
-    background-image: url("/img/logo.png");
-    @include hide-text;
-    @include background-size(100px 65px);
-    margin-bottom: 55px;
-  }
   p {
     font-size: 22px;
     margin-bottom: 32px;
@@ -143,12 +142,30 @@ footer {
   background: $red;
   color: $white;
   padding: 90px 0;
+  @include clearfix;
   background-image: url("/img/hero-bg.png");
   background-position: center bottom;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  .logo {
+    float: left;
+    margin-right: $margin-1;
+    margin-bottom: 0;
+  }
+  p {
+    margin-bottom: 0;
+  }
+  .contact-details {
+    float: left;
+    margin-top: 13px;
+  }
+  #copyright {
+    float: right;
+    text-align: right;
+    margin-top: 51px;
+  }
 }
 
 
@@ -179,7 +196,7 @@ footer {
 @media
 only screen and (-webkit-min-device-pixel-ratio : 1.5),
 only screen and (min-device-pixel-ratio : 1.5) {
-  #hero .logo {
+  .logo {
     background-image: url("/img/logo@2x.png");
   }
 }
