--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -500,11 +500,40 @@ section {
   color: #155B62;
 }
 
+/* line 121, ../sass/_main.scss */
+.company-pair {
+  *zoom: 1;
+}
+/* line 2, ../sass/_mixins.scss */
+.company-pair:before, .company-pair:after {
+  content: " ";
+  display: table;
+}
+/* line 6, ../sass/_mixins.scss */
+.company-pair:after {
+  clear: both;
+}
 /* line 123, ../sass/_main.scss */
+.company-pair .company {
+  width: 48.14815%;
+  float: left;
+  margin-right: 3.7037%;
+  margin-bottom: 70px;
+}
+/* line 128, ../sass/_main.scss */
+.company-pair .company:last-child {
+  margin-right: 0;
+}
+
+/* line 135, ../sass/_main.scss */
 #people {
   background: #F5F5F5;
 }
-/* line 125, ../sass/_main.scss */
+/* line 137, ../sass/_main.scss */
+#people h2 {
+  color: #155B62;
+}
+/* line 140, ../sass/_main.scss */
 #people ul {
   *zoom: 1;
 }
@@ -517,18 +546,18 @@ section {
 #people ul:after {
   clear: both;
 }
-/* line 127, ../sass/_main.scss */
+/* line 142, ../sass/_main.scss */
 #people ul li {
   float: left;
   width: 30.864197530864%;
   margin-right: 3.7037%;
 }
-/* line 131, ../sass/_main.scss */
+/* line 146, ../sass/_main.scss */
 #people ul li:last-child {
   margin-right: 0;
 }
 
-/* line 141, ../sass/_main.scss */
+/* line 156, ../sass/_main.scss */
 footer {
   background: #b5533f;
   color: white;
@@ -550,22 +579,22 @@ footer:before, footer:after {
 footer:after {
   clear: both;
 }
-/* line 152, ../sass/_main.scss */
+/* line 167, ../sass/_main.scss */
 footer .logo {
   float: left;
   margin-right: 3.7037%;
   margin-bottom: 0;
 }
-/* line 157, ../sass/_main.scss */
+/* line 172, ../sass/_main.scss */
 footer p {
   margin-bottom: 0;
 }
-/* line 160, ../sass/_main.scss */
+/* line 175, ../sass/_main.scss */
 footer .contact-details {
   float: left;
   margin-top: 13px;
 }
-/* line 164, ../sass/_main.scss */
+/* line 179, ../sass/_main.scss */
 footer #copyright {
   float: right;
   text-align: right;
@@ -576,7 +605,7 @@ footer #copyright {
    Media Queries
    ========================================================================== */
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
-  /* line 199, ../sass/_main.scss */
+  /* line 214, ../sass/_main.scss */
   .logo {
     background-image: url("/img/logo@2x.png");
   }
