--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -125,7 +125,7 @@ section {
   width: $col4;
   float: left;
   margin-right: $margin-1;
-  margin-bottom: 70px;
+  margin-bottom: 60px;
   &:last-child {
     margin-right: 0;
   }
@@ -139,6 +139,64 @@ section {
       margin-right: 8px;
       font-weight: $bold;
     }
+  }
+  h3 {
+    margin-bottom: 30px;
+    height: 50px;
+    a {
+      height: 50px;
+      display: inline-block;
+      &:before {
+        content: "";
+        display: inline-block;
+        height: 100%;
+        vertical-align: bottom;
+      }
+    }
+    img {
+      width: 100%;
+      vertical-align: middle;
+      max-height: 50px;
+    }
+  }
+  &#domo img {
+      width: 72px;
+  }
+  &#insidesales img {
+      width: 170px;
+  }
+  &#lucid img {
+      width: 80px;
+  }
+  &#kaggle img {
+      width: 90px;
+  }
+  &#clearbit img {
+      width: 140px;
+  }
+  &#follow img {
+      width: 140px;
+  }
+  &#eventboard img {
+      width: 140px;
+  }
+  &#tractable img {
+      width: 44px;
+  }
+  &#content img {
+      width: 110px;
+  }
+  &#optimine img {
+      width: 140px;
+  }
+  &#pixlee img {
+      width: 120px;
+  }
+  &#stealth img {
+      width: 164px;
+  }
+  &#domino img {
+      width: 140px;
   }
 }
 
