--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -519,7 +519,7 @@ section {
   width: 48.14815%;
   float: left;
   margin-right: 3.7037%;
-  margin-bottom: 70px;
+  margin-bottom: 60px;
 }
 /* line 129, ../sass/_main.scss */
 .company:last-child {
@@ -538,16 +538,91 @@ section {
   margin-right: 8px;
   font-weight: 700;
 }
-
+/* line 143, ../sass/_main.scss */
+.company h3 {
+  margin-bottom: 30px;
+  height: 50px;
+}
 /* line 146, ../sass/_main.scss */
+.company h3 a {
+  height: 50px;
+  display: inline-block;
+}
+/* line 149, ../sass/_main.scss */
+.company h3 a:before {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  vertical-align: bottom;
+}
+/* line 156, ../sass/_main.scss */
+.company h3 img {
+  width: 100%;
+  vertical-align: middle;
+  max-height: 50px;
+}
+/* line 162, ../sass/_main.scss */
+.company#domo img {
+  width: 72px;
+}
+/* line 165, ../sass/_main.scss */
+.company#insidesales img {
+  width: 170px;
+}
+/* line 168, ../sass/_main.scss */
+.company#lucid img {
+  width: 80px;
+}
+/* line 171, ../sass/_main.scss */
+.company#kaggle img {
+  width: 90px;
+}
+/* line 174, ../sass/_main.scss */
+.company#clearbit img {
+  width: 140px;
+}
+/* line 177, ../sass/_main.scss */
+.company#follow img {
+  width: 140px;
+}
+/* line 180, ../sass/_main.scss */
+.company#eventboard img {
+  width: 140px;
+}
+/* line 183, ../sass/_main.scss */
+.company#tractable img {
+  width: 44px;
+}
+/* line 186, ../sass/_main.scss */
+.company#content img {
+  width: 110px;
+}
+/* line 189, ../sass/_main.scss */
+.company#optimine img {
+  width: 140px;
+}
+/* line 192, ../sass/_main.scss */
+.company#pixlee img {
+  width: 120px;
+}
+/* line 195, ../sass/_main.scss */
+.company#stealth img {
+  width: 164px;
+}
+/* line 198, ../sass/_main.scss */
+.company#domino img {
+  width: 140px;
+}
+
+/* line 204, ../sass/_main.scss */
 #people {
   background: #F5F5F5;
 }
-/* line 148, ../sass/_main.scss */
+/* line 206, ../sass/_main.scss */
 #people h2 {
   color: #155B62;
 }
-/* line 151, ../sass/_main.scss */
+/* line 209, ../sass/_main.scss */
 #people ul {
   *zoom: 1;
 }
@@ -560,18 +635,18 @@ section {
 #people ul:after {
   clear: both;
 }
-/* line 153, ../sass/_main.scss */
+/* line 211, ../sass/_main.scss */
 #people ul li {
   float: left;
   width: 30.864197530864%;
   margin-right: 3.7037%;
 }
-/* line 157, ../sass/_main.scss */
+/* line 215, ../sass/_main.scss */
 #people ul li:last-child {
   margin-right: 0;
 }
 
-/* line 167, ../sass/_main.scss */
+/* line 225, ../sass/_main.scss */
 footer {
   background: #b5533f;
   color: white;
@@ -593,22 +668,22 @@ footer:before, footer:after {
 footer:after {
   clear: both;
 }
-/* line 178, ../sass/_main.scss */
+/* line 236, ../sass/_main.scss */
 footer .logo {
   float: left;
   margin-right: 3.7037%;
   margin-bottom: 0;
 }
-/* line 183, ../sass/_main.scss */
+/* line 241, ../sass/_main.scss */
 footer p {
   margin-bottom: 0;
 }
-/* line 186, ../sass/_main.scss */
+/* line 244, ../sass/_main.scss */
 footer .contact-details {
   float: left;
   margin-top: 13px;
 }
-/* line 190, ../sass/_main.scss */
+/* line 248, ../sass/_main.scss */
 footer #copyright {
   float: right;
   text-align: right;
@@ -619,7 +694,7 @@ footer #copyright {
    Media Queries
    ========================================================================== */
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
-  /* line 225, ../sass/_main.scss */
+  /* line 283, ../sass/_main.scss */
   .logo {
     background-image: url("/img/logo@2x.png");
   }
