--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -9,3 +9,8 @@ $bold: 700;
 
 $col4: 48.148148148148%;
 $margin-1: 3.703703703704%;
+
+$tablet-landscape: 1024px;
+$tablet-portrait: 768px;
+$phone-landscape: 667px;
+$phone-portrait: 414px;
