--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -409,7 +409,7 @@ p {
 /* line 51, ../sass/_main.scss */
 .container {
   max-width: 1080px;
-  padding: 0 20px;
+  padding: 0 40px;
   margin: 0 auto;
 }
 
@@ -610,19 +610,23 @@ section {
   width: 164px;
 }
 /* line 198, ../sass/_main.scss */
+.company#domino {
+  margin-bottom: 0;
+}
+/* line 200, ../sass/_main.scss */
 .company#domino img {
   width: 140px;
 }
 
-/* line 204, ../sass/_main.scss */
+/* line 207, ../sass/_main.scss */
 #people {
   background: #F5F5F5;
 }
-/* line 206, ../sass/_main.scss */
+/* line 209, ../sass/_main.scss */
 #people h2 {
   color: #155B62;
 }
-/* line 209, ../sass/_main.scss */
+/* line 212, ../sass/_main.scss */
 #people ul {
   *zoom: 1;
 }
@@ -635,18 +639,18 @@ section {
 #people ul:after {
   clear: both;
 }
-/* line 211, ../sass/_main.scss */
+/* line 214, ../sass/_main.scss */
 #people ul li {
   float: left;
   width: 30.864197530864%;
   margin-right: 3.7037%;
 }
-/* line 215, ../sass/_main.scss */
+/* line 218, ../sass/_main.scss */
 #people ul li:last-child {
   margin-right: 0;
 }
 
-/* line 225, ../sass/_main.scss */
+/* line 228, ../sass/_main.scss */
 footer {
   background: #b5533f;
   color: white;
@@ -668,22 +672,22 @@ footer:before, footer:after {
 footer:after {
   clear: both;
 }
-/* line 236, ../sass/_main.scss */
+/* line 239, ../sass/_main.scss */
 footer .logo {
   float: left;
   margin-right: 3.7037%;
   margin-bottom: 0;
 }
-/* line 241, ../sass/_main.scss */
+/* line 244, ../sass/_main.scss */
 footer p {
   margin-bottom: 0;
 }
-/* line 244, ../sass/_main.scss */
+/* line 247, ../sass/_main.scss */
 footer .contact-details {
   float: left;
   margin-top: 13px;
 }
-/* line 248, ../sass/_main.scss */
+/* line 251, ../sass/_main.scss */
 footer #copyright {
   float: right;
   text-align: right;
@@ -693,8 +697,125 @@ footer #copyright {
 /* ==========================================================================
    Media Queries
    ========================================================================== */
+@media (max-width: 1024px) {
+  /* line 284, ../sass/_main.scss */
+  #hero-content {
+    width: 71.428571428571%;
+  }
+}
+/* Portrait tablet to landscape and desktop */
+/* Landscape phone to portrait tablet */
+@media (max-width: 768px) {
+  /* line 295, ../sass/_main.scss */
+  #introduction {
+    font-size: 14px;
+  }
+}
+/* Landscape phones and down */
+@media (max-width: 667px) {
+  /* line 303, ../sass/_main.scss */
+  section {
+    padding: 100px 0;
+  }
+
+  /* line 306, ../sass/_main.scss */
+  h2 {
+    font-size: 34px;
+    line-height: 42px;
+  }
+
+  /* line 310, ../sass/_main.scss */
+  #introduction {
+    font-size: 16px;
+  }
+
+  /* line 313, ../sass/_main.scss */
+  #hero-content {
+    width: 100%;
+  }
+
+  /* line 316, ../sass/_main.scss */
+  #intro-content .col-4 {
+    width: 100%;
+    margin-right: 0;
+    float: none;
+  }
+
+  /* line 321, ../sass/_main.scss */
+  #introduction {
+    font-size: 18px;
+  }
+
+  /* line 324, ../sass/_main.scss */
+  #people ul li {
+    width: 100%;
+    margin-right: 0;
+    float: none;
+    margin-bottom: 60px;
+  }
+  /* line 329, ../sass/_main.scss */
+  #people ul li:last-child {
+    margin-bottom: 0;
+  }
+}
+@media (max-width: 414px) {
+  /* line 336, ../sass/_main.scss */
+  section {
+    padding: 80px 0;
+  }
+
+  /* line 339, ../sass/_main.scss */
+  .container {
+    padding: 0 20px;
+  }
+
+  /* line 342, ../sass/_main.scss */
+  h1 {
+    font-size: 32px;
+    line-height: 40px;
+  }
+
+  /* line 346, ../sass/_main.scss */
+  #hero p {
+    font-size: 18px;
+  }
+
+  /* line 349, ../sass/_main.scss */
+  h2 {
+    margin-bottom: 40px;
+  }
+
+  /* line 352, ../sass/_main.scss */
+  #introduction {
+    font-size: 16px;
+  }
+
+  /* line 355, ../sass/_main.scss */
+  .company {
+    width: 100%;
+    margin-right: 0;
+    float: none;
+  }
+
+  /* line 360, ../sass/_main.scss */
+  footer .logo {
+    float: none;
+    margin-bottom: 60px;
+  }
+
+  /* line 364, ../sass/_main.scss */
+  footer .contact-details {
+    float: none;
+  }
+
+  /* line 367, ../sass/_main.scss */
+  footer #copyright {
+    text-align: left;
+    float: none;
+  }
+}
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
-  /* line 283, ../sass/_main.scss */
+  /* line 378, ../sass/_main.scss */
   .logo {
     background-image: url("/img/logo@2x.png");
   }
