--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -423,7 +423,7 @@ section {
   width: 100px;
   height: 65px;
   display: block;
-  background-image: url("/img/logo.png");
+  background-image: url("img/logo.png");
   text-indent: 100%;
   white-space: nowrap;
   overflow: hidden;
@@ -438,7 +438,7 @@ section {
 #hero {
   background: #b5533f;
   color: white;
-  background-image: url("/img/hero-bg.png");
+  background-image: url("img/hero-bg.png");
   background-position: center bottom;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -455,7 +455,7 @@ section {
 #hero-content {
   width: 48.14815%;
   margin: 0 auto;
-  background-image: url("/img/hero-bg.png");
+  background-image: url("img/hero-bg.png");
 }
 
 /* line 92, ../sass/_main.scss */
@@ -463,7 +463,7 @@ section {
   background: #155B62;
   color: white;
   font-size: 18px;
-  background-image: url("/img/intro-bg.png");
+  background-image: url("img/intro-bg.png");
   background-position: center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -656,7 +656,7 @@ footer {
   color: white;
   padding: 90px 0;
   *zoom: 1;
-  background-image: url("/img/hero-bg.png");
+  background-image: url("img/hero-bg.png");
   background-position: center bottom;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -817,7 +817,7 @@ footer #copyright {
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
   /* line 378, ../sass/_main.scss */
   .logo {
-    background-image: url("/img/logo@2x.png");
+    background-image: url("img/logo@2x.png");
   }
 }
 /* ==========================================================================
